changed JTA dependency to use geronimo spec to avoid having to download and install JTA manually
git-svn-id: http://mybatis.googlecode.com/svn/trunk@1996 6a4a4fef-ff2a-56b0-fee9-946765563393

--- a/pom.xml
+++ b/pom.xml
@@ -200,10 +200,10 @@
       <scope>test</scope>
     </dependency>
     <dependency>
-      <groupId>javax.transaction</groupId>
-      <artifactId>jta</artifactId>
-      <version>1.0.1B</version>
-      <scope>test</scope>
+        <groupId>geronimo-spec</groupId>
+        <artifactId>geronimo-spec-jta</artifactId>
+        <version>1.0.1B-rc4</version>
+        <scope>test</scope>
     </dependency>
   </dependencies>
 </project>
