--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,4 @@
-<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-         xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
+<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <modelVersion>4.0.0</modelVersion> 
   <groupId>org.mybatis</groupId>
   <artifactId>mybatis</artifactId>
@@ -10,7 +9,7 @@
     annotations. Simplicity is the biggest advantage of the mybatis data mapper over object relational mapping
     tools.
   </description>
-  <version>3.0.1-SNAPSHOT</version>
+  <version>3.0.1</version>
   <packaging>jar</packaging>
   <url>http://www.mybatis.org/</url>
   <licenses>
@@ -46,8 +45,8 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <scm>
-    <connection>scm:svn:https://mybatis.googlecode.com/svn/</connection>
-    <developerConnection>scm:svn:https://mybatis.googlecode.com/svn/</developerConnection>
+    <connection>scm:svn:https://mybatis.googlecode.com/svn/tags/mybatis-3.0.1</connection>
+    <developerConnection>scm:svn:https://mybatis.googlecode.com/svn/tags/mybatis-3.0.1</developerConnection>
   </scm>
   <reporting>
     <plugins>
