added configuration for the maven release plugin
git-svn-id: http://mybatis.googlecode.com/svn/trunk@2098 6a4a4fef-ff2a-56b0-fee9-946765563393

--- a/pom.xml
+++ b/pom.xml
@@ -1,5 +1,5 @@
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
-  <modelVersion>4.0.0</modelVersion> 
+  <modelVersion>4.0.0</modelVersion>
   <groupId>org.mybatis</groupId>
   <artifactId>mybatis</artifactId>
   <name>mybatis</name>
@@ -72,6 +72,10 @@
       <plugin>
         <groupId>org.apache.maven.plugins</groupId>
         <artifactId>maven-release-plugin</artifactId>
+        <configuration>
+          <tagBase>https://mybatis.googlecode.com/svn/tags/</tagBase>
+          <mavenExecutorId>forked-path</mavenExecutorId>
+        </configuration>
       </plugin>
       <plugin>
         <artifactId>maven-assembly-plugin</artifactId>
