added the url configuration to the scm section
git-svn-id: http://mybatis.googlecode.com/svn/trunk@2108 6a4a4fef-ff2a-56b0-fee9-946765563393

--- a/pom.xml
+++ b/pom.xml
@@ -45,6 +45,7 @@
     <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
   </properties>
   <scm>
+    <url>scm:svn:https://mybatis.googlecode.com/svn/</url>
     <connection>scm:svn:https://mybatis.googlecode.com/svn/</connection>
     <developerConnection>scm:svn:https://mybatis.googlecode.com/svn/</developerConnection>
   </scm>
