just added myself to the developers list
git-svn-id: http://mybatis.googlecode.com/svn/trunk@2187 6a4a4fef-ff2a-56b0-fee9-946765563393

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,11 @@
       <name>Nathan Maves</name>
       <email>nathan.maves@gmail.com</email>
     </developer>
+    <developer>
+      <id>simone.tripodi</id>
+      <name>Simone Tripodi</name>
+      <email>simone.tripodi@gmail.com</email>
+    </developer>
   </developers>
   <scm>
     <url>scm:svn:https://mybatis.googlecode.com/svn/</url>
