--- a/src/test/java/log4j.properties
+++ b/src/test/java/log4j.properties
@@ -1,11 +1,12 @@
 ### Global logging configuration
-log4j.rootLogger=DEBUG, stdout
+log4j.rootLogger=ERROR, stdout
 
 ### Uncomment ALL for iBATIS logging
-log4j.logger.org.apache.ibatis=DEBUG
-log4j.logger.java.sql=DEBUG
+log4j.logger.java.sql=ERROR
+log4j.logger.org.apache.ibatis=ERROR
+log4j.logger.java.sql=ERROR
 
 ### Console output...
-#log4j.appender.stdout=org.apache.log4j.ConsoleAppender
-#log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
-#log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
+log4j.appender.stdout=org.apache.log4j.ConsoleAppender
+log4j.appender.stdout.layout=org.apache.log4j.PatternLayout
+log4j.appender.stdout.layout.ConversionPattern=%5p [%t] - %m%n
