reverted root logger to DEBUG to fix the LogFactoryTest
git-svn-id: http://mybatis.googlecode.com/svn/trunk@2425 6a4a4fef-ff2a-56b0-fee9-946765563393

--- a/src/test/java/log4j.properties
+++ b/src/test/java/log4j.properties
@@ -1,10 +1,9 @@
 ### Global logging configuration
-log4j.rootLogger=ERROR, stdout
+log4j.rootLogger=DEBUG, stdout
 
 ### Uncomment ALL for iBATIS logging
 log4j.logger.java.sql=ERROR
 log4j.logger.org.apache.ibatis=ERROR
-log4j.logger.java.sql=ERROR
 
 ### Console output...
 log4j.appender.stdout=org.apache.log4j.ConsoleAppender
