--- a/pom.xml
+++ b/pom.xml
@@ -1,4 +1,4 @@
-
+<?xml version="1.0" encoding="UTF-8"?>
 <project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
   <parent>
     <groupId>org.sonatype.oss</groupId>
@@ -50,6 +50,11 @@
       <id>simone.tripodi</id>
       <name>Simone Tripodi</name>
       <email>simone.tripodi@gmail.com</email>
+    </developer>
+    <developer>
+      <id>christian.poitras</id>
+      <name>Christian Poitras</name>
+      <email>christian.poitras@ircm.qc.ca</email>
     </developer>
   </developers>
   <scm>
