--- a/pom.xml
+++ b/pom.xml
@@ -111,7 +111,7 @@
           <uploads>
             <upload>
               <file>${project.build.directory}/${project.artifactId}-${project.version}-bundle.zip</file>
-              <summary>MyBatis Persistence Framework ${pom.version} GA</summary>
+              <summary>MyBatis Persistence Framework ${project.version} GA</summary>
               <labels>
                 <label>Featured</label>
                 <label>Type-Archive</label>
@@ -119,7 +119,7 @@
             </upload>
             <upload>
               <file>${project.build.directory}/${project.artifactId}-${project.version}-migrations.zip</file>
-              <summary>MyBatis Schema Migrations ${pom.version} GA</summary>
+              <summary>MyBatis Schema Migrations ${project.version} GA</summary>
               <labels>
                 <label>Featured</label>
                 <label>Type-Archive</label>
